methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:19: error: not enough arguments for method marquerSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    marquerSol()
              ^